@@ -5,6 +5,8 @@ HEAD
 	non-qualified hostname
 	+ Firewall default policy allows mail system from external
 	networks because is the expected and usual thing
+	+ Bugfix: is not longer allowed a external alias with the same address than
+	a existent account
 1.4.2
 	+ Bugfix, mail to local accounts is delivered correctly, changed
 	some parameters to take in account myorigin
